<resources>
    <string name="app_name">DocDash</string>
    <string name="login_hint_email">user@domain.com</string>
    <string name="login_hint_password">password</string>
    <string name="task_pool">Task Pool</string>
    <string name="my_tasks">My Tasks</string>
    <string name="task_number">Task No:</string>
    <string name="task_due">Due Date:</string>
    <string name="tests_title">Tests:</string>
    <string name="patient_title">Patient:</string>
    <string name="patient_room_title">Room:</string>
    <string name="patient_details">Patient Details</string>
    <string name="tests_details">Tests Details:</string>
    <string name="required_tests">Required Tests</string>
    <string name="task_details">Task Details</string>
    <string name="take_task">Take Task</string>
    <string name="name">Name</string>
    <string name="room">Room</string>
    <string name="disease">Disease</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="dob">Date of Birth</string>
    <string name="test_results">Test Results</string>
    <string name="tests">Tests</string>
    <string name="complete_task">Complete Task</string>
    <string name="task_completed">Task Completed</string>
    <string name="active_tasks">Active Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="test_number">Test No: </string>

    <string name="back_to_task_details">Back to Task Details</string>
    <string name="write_results">Write Results Here...</string>

    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>

    <string name="limit_list_size">List size limits:</string>
    <string name="save_settings">Save</string>

    <string name="nurse_name">Nurse Name:</string>
    <string name="nurse_email">Email Address:</string>

    <string name="dummy_text_short">Lorem Ipsum</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="dummy_text_very_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae libero at urna sagittis luctus at eu erat. Phasellus nibh metus, bibendum eget laoreet sed, finibus et turpis. Nunc pellentesque id magna ut efficitur. Sed fringilla magna sit amet elit elementum vehicula. Quisque eu nunc molestie, gravida turpis vel, dapibus dui. Donec vitae erat eget risus bibendum blandit. Vivamus eget purus felis. </string>
    <string name="dummy_number">123</string>
    <string name="dummy_number_long">1234567890</string>
    <string name="dummy_date">1970-01-01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>